# dtn-go-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dtnclient/: __init__.py  cli.py  client.py  dtnclient.py  eid.py  messages.py
