[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtnclient"
version = "0.1"
description = "Python client for dtn7-go"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3+"}
dependencies = [
    "python-rapidjson",
    "requests"
]
authors = [
    {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"},
]
maintainers = [
  {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"}
]
keywords = ["dtn bundle"]
classifiers = [
    "Development Status :: 4 - Beta",

    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/CryptoCopter/dtnclient"
"Bug Reports" = "https://github.com/CryptoCopter/dtnclient/issues"
Source = "https://github.com/CryptoCopter/dtnclient"

[project.scripts]
dtnclient = "dtnclient.dtnclient:main"
