[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtnclient"
version = "0.1"
description = "Python client for dtn7-go"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"},
]
maintainers = [
  {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"}
]
keywords = ["dtn bundle_protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",

    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "ormsgpack"
]
[dependency-groups]
dev = [
    "pre-commit",
    "hatchling",
]
lint = [
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/CryptoCopter/dtnclient"
"Bug Reports" = "https://github.com/CryptoCopter/dtnclient/issues"
Source = "https://github.com/CryptoCopter/dtnclient"

[project.scripts]
dtnclient = "dtnclient.dtnclient:main"
