[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtnclient"
version = "0.2"
description = "Python client for dtn7-go"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de" },
    { name = "Leon Wimbes", email = "wimbes@students.uni-marburg.de" },
]
maintainers = [
  {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"}
]
keywords = ["dtn bundle_protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "ormsgpack"
]
[dependency-groups]
dev = [
    "pre-commit",
    "hatchling",
]
lint = [
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/dtn7/dtn-go-client"
"Bug Reports" = "https://github.com/dtn7/dtn-go-client/issues"
Source = "https://github.com/dtn7/dtn-go-client/dtnclient"

[project.scripts]
dtnclient = "dtnclient.cli:main"
